product_docs/docs/migration_portal/3.5.0/04_mp_migrating_database/03_mp_schema_migration.mdx
---
title: "Schema migration"


legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/edb-postgres-migration-portal/user-guides/user-guide/3.0.1/mp_schema_migration.html"
---

<div id="mp_schema_migration" class="registered_link"></div>

After resolving errors in your schemas, you can use the schemas with a client application such as pgAdmin, Toad Edge, or the PSQL client. Or you can migrate the schema to an EDB Postgres Advanced Server.

You can migrate to any of these schemas:

-   Existing on-premises EDB Postgres Advanced Server
-   New on-premises EDB Postgres Advanced Server
-   EDB Postgres Advanced Server in the cloud

<div id="existing_on_premises_edb_advanced_server" class="registered_link"></div>

## Migrating to an existing on-premises EDB Postgres Advanced Server host

You can migrate schemas to an existing on-premises EDB Postgres Advanced Server on Windows or Linux platforms.

### Migrate schemas on Windows

1.  Select **Existing on-premises EDB Postgres Postgres Advanced Server**.


2.  Select one or more schemas to migrate to EDB Postgres Advanced Server.

 !!! Note
     If your schemas aren't 100% compatible, a banner appears. Complete the Contact Us form as needed.


3.  To download the assessed schemas, select **Download SQL file**.


4.  Select **Windows**.


5.  To import the schemas, run the following command:

-   On CLI:

    ```text
    \i c:\users\...\<project_name>.sql
    ```

-   On cmd/shell:

    ```text
    edb-psql -f <project_name>.sql
    ```

 !!! Note
    You can alternatively use the `pgAdmin` client for the import.

The converted schemas migrate to the target server.


### Migrate schemas on Linux

You can migrate schemas to an existing on-premises EDB Postgres Advanced Server on Linux.

1.  Select `Existing on-premises EDB Postgres Advanced Server`.


2.  Select one or more schemas to migrate to EDB Postgres Advanced Server.


3.  To download the assessed schemas, select **Download SQL file**.


4.  Select **Linux**.


5.  To import the schemas, invoke the following `edb-psql` client commands:

    ```text
    sudo su - enterprisedb
    edb-psql edb
    create database <database_name>;
    \\connect <database_name>
    \\i <project_name>.sql
    ```

 !!! Note
    You can alternatively use the `pgAdmin` client for the import.

The converted schemas migrate to the target server.

<div id="new_on_premises_edb_advanced_server" class="registered_link"></div>

## Migrating to a new on-premises EDB Postgres Advanced Server installation

You can install new EDB Postgres Advanced Server on premises on Windows or Linux platforms and migrate the schemas.

### Migrate schemas on Windows

Migrate schemas to a new on-premises EDB Postgres Advanced Server on Windows.

1.  Select **New on-premises EDB Postgres Postgres Advanced Server**.


2.  Select one or more schemas to migrate on EDB Postgres Advanced Server.


3.  For the operating system, select **Windows**.


4.  Select **Download Windows installer**.


5.  For installation steps, select **EDB Postgres Advanced Server Installation Guide for Windows**.


6.  To download the assessed schemas, select **Download SQL file**.


7.  You can import schemas by running the following command:

    -   On CLI

        ```text
        \i c:\users\...\<project_name>.sql
        ```

    -   On cmd/shell

        ```text
        edb-psql -f <project_name>.sql
        ```

 !!! Note
    You can alternatively use the `pgAdmin` client for the import.


### Migrate schemas on Linux

Migrate schemas to an on-premises EDB Postgres Advanced Server on Linux.

1.  Select **New On-premises EDB Postgres Advanced Server**.


2.  Select one or more schemas to migrate on EDB Postgres Advanced Server.

3.  For the operating system, select the Linux.


4.  You can select one of the following options to install the EDB Postgres Advanced Server:

    -   Repository
    -   More options

5.  For information on the installation procedure, select `EDB Postgres Advanced Server Installation Guide` for Linux.


6.  To download the assessed schemas, select **Download SQL file**. 


7.  To import the schemas, run the following command:

    ```text
    sudo su - enterprisedb
    edb-psql edb
    create database <database_name>;
    \connect <database_name>
    \i <project_name>.sql
    ```

 !!! Note
    You can alternatively use the `pgAdmin` client for the import.

The converted schemas migrate to the target server.


## Migrate to the cloud

Migrate schemas on EDB Postgres Advanced Server to the cloud.

1.  Select **EDB Postgres Advanced Server on Cloud**.


2.  Select one or more schemas to migrate to EDB Postgres Advanced Server.

3.  Select the cloud platform, for example, **BigAnimal**.


4.  To launch a new cluster, select **Go to BigAnimal**.
 
 Or, if you have an existing cluster running, select `Next`.

  !!! Note
    See the [Big Animal](https://www.enterprisedb.com/edb-cloud) page for more information.

5.  Enter the required connection details on the `Connect` page.

 ![Connecting to the cloud cluster](../images/mp_migrate_cloud_connection_updated.png)

7.  To verify the connection details, select **Test Connection**.

 !!! Note
    You can select **Edit Connection** to make changes to the connection details and retest the connection details.

8.  Once the connection is successful, select **Next**.


The converted schemas migrate to the target server.
