product_docs/docs/migration_portal/4.0/04_mp_migrating_database/03_mp_schema_migration.mdx
---
title: "Schema migration"


legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/edb-postgres-migration-portal/user-guides/user-guide/3.0.1/mp_schema_migration.html"
---

<div id="mp_schema_migration" class="registered_link"></div>

After resolving errors in your schemas, you can use the schemas with a client application such as pgAdmin, Toad Edge, or the PSQL client. Or you can migrate the schema to an EDB Postgres Advanced Server.

You can migrate to any of these schemas:

-   Existing on-premises EDB Postgres Advanced Server
-   New on-premises EDB Postgres Advanced Server
-   EDB Postgres Advanced Server in the cloud

<div id="existing_on_premises_edb_advanced_server" class="registered_link"></div>

## Migrating to an existing on-premises EDB Postgres Advanced Server host

You can migrate schemas to an existing on-premises EDB Postgres Advanced Server on Windows or Linux platforms.

### Migrate schemas on Windows

1.  Select **Existing on-premises EDB Postgres Postgres Advanced Server**.

1.  Select one or more schemas to migrate to EDB Postgres Advanced Server. You can also expand a schema and select specific object types under each schema. 
 
 ![Schema and objects are selected](../images/schema_object_selection.png)

 !!!Note
     If your schemas aren't 100% compatible, a banner appears. Complete the Contact Us form as needed.

1. To download the assessed schemas, select **Download SQL file**. 

1. Extract the downloaded zip file. The zip package consists of SQL files with DDLs for your selected schemas and objects. The DDLs are grouped in SQL files by project, schemas, or objects.

 | SQL file naming convention                              | Description                                                                              | Example                                                                         |
 |------------------------------------------------|------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------|
 | *&lt;ProjectName>* _ALL_OBJECTS.sql            | A single consolidated file consisting of DDLs for all your selected schemas and objects. | **AllTestMigration_ALL_OBJECTS.sql** will consist of DDLs for all objects of schemas OE, SH, IX, and PM, and only selected objects of schema HR.                                                                            |
 | *&lt;SchemaName>* .sql                         | One or more files, each consisting of DDLs for selected objects in a particular schema.  | **HR.sql**  will consist of DDLs for all the selected objects of the HR schema. |
 | *&lt;SchemaName>* &#95; *&lt;ObjectType>* .sql | One or more files, each consisting of DDLs for a single selected object.                 | **HR_TABLE.sql**  will consist of DDLs only for TABLE object of the HR schema. |

1.  Select **Windows**.

1.  To import the schemas, run:

    -   On CLI:

        ```text
        \i c:\users\...\<sql_file_name>.sql
        ```

    -   On cmd/shell:

        ```text
        edb-psql -f <sql_file_name>.sql
        ```

    !!! Note
        You can alternatively use the `pgAdmin` client for the import.

The converted schemas migrate to the target server.


### Migrate schemas on Linux

You can migrate schemas to an existing on-premises EDB Postgres Advanced Server on Linux.

1.  Select **Existing on-premises EDB Postgres Advanced Server**.

1.  Select one or more schemas to migrate to EDB Postgres Advanced Server. You can also expand a schema and select specific object types under each schema.
 
 ![Schema and objects are selected](../images/schema_object_selection.png)

1.  To download the assessed schemas, select **Download SQL file**.

1. Extract the downloaded zip file. The zip package consists of SQL files with DDLs for your selected schemas and objects. The DDLs are grouped in SQL files by project, schemas, or objects.

 | SQL file naming convention                              | Description                                                                              | Example                                                                         |
 |------------------------------------------------|------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------|
 | *&lt;ProjectName>* _ALL_OBJECTS.sql            | A single consolidated file consisting of DDLs for all your selected schemas and objects. | **AllTestMigration_ALL_OBJECTS.sql** will consist of DDLs for all objects of schemas OE, SH, IX, and PM, and only selected objects of schema HR.                                                                            |
 | *&lt;SchemaName>* .sql                         | One or more files, each consisting of DDLs for selected objects in a particular schema.  | **HR.sql**  will consist of DDLs for all the selected objects of the HR schema. |
 | *&lt;SchemaName>* &#95; *&lt;ObjectType>* .sql | One or more files, each consisting of DDLs for a single selected object.                 | **HR_TABLE.sql**  will consist of DDLs only for TABLE object of the HR schema. |

1.  Select **Linux**.

1.  To import the schemas, invoke the following `edb-psql` client commands:

    ```text
    sudo su - enterprisedb
    edb-psql edb
    create database <database_name>;
    \connect <database_name>
    \i <sql_file_name>.sql
    ```

 !!! Note
    You can alternatively use the `pgAdmin` client for the import.

The converted schemas migrate to the target server.

<div id="new_on_premises_edb_advanced_server" class="registered_link"></div>

## Migrating to a new on-premises EDB Postgres Advanced Server installation

You can install new EDB Postgres Advanced Server on premises on Windows or Linux platforms and migrate the schemas.

### Migrate schemas on Windows

Migrate schemas to a new on-premises EDB Postgres Advanced Server on Windows.

1.  Select **New on-premises EDB Postgres Postgres Advanced Server**.

1.  Select one or more schemas to migrate to EDB Postgres Advanced Server. You can also expand a schema and select specific object types under each schema.
 
 ![Schema and objects are selected](../images/schema_object_selection.png)

1.  For the operating system, select **Windows**.

1.  Select **Download Windows installer**.

1.  For installation steps, select **EDB Postgres Advanced Server Installation Guide for Windows**.

1.  To download the assessed schemas, select **Download SQL file**.

1. Extract the downloaded zip file. The zip package consists of SQL files with DDLs for your selected schemas and objects. The DDLs are grouped in SQL files by project, schemas, or objects.

 | SQL file naming convention                              | Description                                                                              | Example                                                                         |
 |------------------------------------------------|------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------|
 | *&lt;ProjectName>* _ALL_OBJECTS.sql            | A single consolidated file consisting of DDLs for all your selected schemas and objects. | **AllTestMigration_ALL_OBJECTS.sql** will consist of DDLs for all objects of schemas OE, SH, IX, and PM, and only selected objects of schema HR.                                                                            |
 | *&lt;SchemaName>* .sql                         | One or more files, each consisting of DDLs for selected objects in a particular schema.  | **HR.sql**  will consist of DDLs for all the selected objects of the HR schema. |
 | *&lt;SchemaName>* &#95; *&lt;ObjectType>* .sql | One or more files, each consisting of DDLs for a single selected object.                 | **HR_TABLE.sql**  will consist of DDLs only for TABLE object of the HR schema. |

1.  You can import schemas by running:

    -   On CLI

        ```text
        \i c:\users\...\<sql_file_name>.sql
        ```

    -   On cmd/shell

        ```text
        edb-psql -f <sql_file_name>.sql
        ```

 !!! Note
    You can alternatively use the `pgAdmin` client for the import.


### Migrate schemas on Linux

Migrate schemas to an on-premises EDB Postgres Advanced Server on Linux.

1.  Select **New On-premises EDB Postgres Advanced Server**.

1.  Select one or more schemas to migrate to EDB Postgres Advanced Server. You can also expand a schema and select specific object types under each schema.
 
 ![Schema and objects are selected](../images/schema_object_selection.png)

1.  For the operating system, select **Linux**.

1.  You can select one of the following options to install the EDB Postgres Advanced Server:

    -   Repository
    -   More options

1.  For information on the installation procedure, select **EDB Postgres Advanced Server Installation Guide** for Linux.

1.  To download the assessed schemas, select **Download SQL file**. 

1. Extract the downloaded zip file. The zip package consists of SQL files with DDLs for your selected schemas and objects. The DDLs are grouped in SQL files by project, schemas, or objects.

 | SQL file naming convention                              | Description                                                                              | Example                                                                         |
 |------------------------------------------------|------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------|
 | *&lt;ProjectName>* _ALL_OBJECTS.sql            | A single consolidated file consisting of DDLs for all your selected schemas and objects. | **AllTestMigration_ALL_OBJECTS.sql** will consist of DDLs for all objects of schemas OE, SH, IX, and PM, and only selected objects of schema HR.                                                                            |
 | *&lt;SchemaName>* .sql                         | One or more files, each consisting of DDLs for selected objects in a particular schema.  | **HR.sql**  will consist of DDLs for all the selected objects of the HR schema. |
 | *&lt;SchemaName>* &#95; *&lt;ObjectType>* .sql | One or more files, each consisting of DDLs for a single selected object.                 | **HR_TABLE.sql**  will consist of DDLs only for TABLE object of the HR schema. |

1.  To import the schemas, run:

    ```text
    sudo su - enterprisedb
    edb-psql edb
    create database <database_name>;
    \connect <database_name>
    \i <sql_file_name>.sql
    ```

 !!! Note
    You can alternatively use the `pgAdmin` client for the import.

The converted schemas migrate to the target server.

## Migrate to the cloud

Migrate schemas on EDB Postgres Advanced Server to the cloud.

1.  Select **EDB Postgres Advanced Server on Cloud**.

1.  Select one or more schemas to migrate to EDB Postgres Advanced Server. You can also expand a schema and select specific object types under each schema.
 
 ![Schema and objects are selected](../images/schema_object_selection.png)

1.  Select the cloud platform, for example, **BigAnimal**.

1.  To launch a new cluster, select **Go to BigAnimal**.
 
    Or, if you have an existing cluster running, select **Next**.

    !!! Note
    See the [Big Animal](https://www.enterprisedb.com/edb-cloud) page for more information.

1.  Enter the required connection details on the `Connect` page.

    ![Connecting to the cloud cluster](../images/mp_migrate_cloud_connection_updated.png)

1.  To verify the connection details, select **Test Connection**.

    !!! Note
    You can select **Edit Connection** to make changes to the connection details and retest the connection details.

1.  Once the connection is successful, select **Next**.


The converted schemas migrate to the target server.


